[gd_scene load_steps=5 format=3 uid="uid://bogdjqho4swjl"]

[ext_resource type="Script" uid="uid://bdqvn448n0mdn" path="res://scenes/pickup.gd" id="1_00kdr"]
[ext_resource type="PackedScene" uid="uid://farjai25lkyq" path="res://scenes/ammo_box_model.tscn" id="1_ye4hu"]
[ext_resource type="AudioStream" uid="uid://bb3b88k8mostf" path="res://assets/audio/ammo_pickup.wav" id="3_1r4qa"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ye4hu"]
height = 0.219482
radius = 0.26709

[node name="AmmoBox" type="Area3D"]
script = ExtResource("1_00kdr")

[node name="ammo_box" parent="." instance=ExtResource("1_ye4hu")]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0, 0.072262, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0270081, 0.156124, -0.0657959)
shape = SubResource("CylinderShape3D_ye4hu")

[node name="PickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1r4qa")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="PickupSound" to="." method="_on_audio_stream_player_finished"]
